--- a/plugin.xml
+++ b/plugin.xml
@@ -2,11 +2,16 @@
 <plugin id="io.iclue.backgroundvideo" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>backgroundvideo</name>
     <description>A simple Cordova/Phonegap plugin to capture video and then display it onscreen via a transparent overlay without affecting app functionality.</description>
-    <author>iclue</author>
+    <author>James McCallum and Josh Hayward support@iclue.io</author>
     
     <engines>
         <engine name="cordova" version=">=3.0.0" />
     </engines>
+
+    <keywords>video, background, transparent, overlay, recording, camera</keywords>
+	
+    <license>GPL3</license>
+ 
     
     <js-module name="backgroundvideo" src="www/backgroundvideo.js">
         <clobbers target="cordova.plugins.backgroundvideo" />
