--- a/plugin.xml
+++ b/plugin.xml
@@ -29,4 +29,30 @@
         <framework src="MediaPlayer.framework" weak="true" />
     </platform>
     
+
+    <platform name="android">
+    
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="backgroundvideo">
+                <param name="android-package" value="io.iclue.backgroundvideo.BackgroundVideo"/>
+            </feature>
+        </config-file>
+   
+        
+        <!-- add permissions in AndroidManifest.xml file-->
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.CAMERA" />
+            <uses-permission android:name="android.permission.RECORD_AUDIO" />
+            
+            <uses-feature android:name="android.hardware.camera" android:required="false" />
+            <uses-feature android:name="android.hardware.camera.front" android:required="false" />
+            <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+        </config-file>
+
+        <source-file src="src/android/BackgroundVideo.java" target-dir="io/iclue/backgroundvideo" />
+        <source-file src="src/android/VideoPreview.java" target-dir="io/iclue/backgroundvideo" />
+        <source-file src="src/android/VideoRecorder.java" target-dir="io/iclue/backgroundvideo" />
+        <source-file src="src/android/CameraHelper.java" target-dir="io/iclue/backgroundvideo" />
+     </platform>
+     
 </plugin>
