--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="io.iclue.backgroundvideo" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="io.iclue.backgroundvideo" version="0.0.2" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>backgroundvideo</name>
     <description>A simple Cordova/Phonegap plugin to capture video and then display it onscreen via a transparent overlay without affecting app functionality.</description>
     <author>James McCallum and Josh Hayward support@iclue.io</author>
@@ -43,6 +43,7 @@
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.CAMERA" />
             <uses-permission android:name="android.permission.RECORD_AUDIO" />
+            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             
             <uses-feature android:name="android.hardware.camera" android:required="false" />
             <uses-feature android:name="android.hardware.camera.front" android:required="false" />
@@ -50,9 +51,12 @@
         </config-file>
 
         <source-file src="src/android/BackgroundVideo.java" target-dir="src/io/iclue/backgroundvideo" />
-        <source-file src="src/android/VideoPreview.java" target-dir="src/io/iclue/backgroundvideo" />
-        <source-file src="src/android/VideoRecorder.java" target-dir="src/io/iclue/backgroundvideo" />
         <source-file src="src/android/CameraHelper.java" target-dir="src/io/iclue/backgroundvideo" />
+        <source-file src="src/android/Preview.java" target-dir="src/io/iclue/backgroundvideo" />
+        <source-file src="src/android/PreviewType.java" target-dir="src/io/iclue/backgroundvideo" />
+        <source-file src="src/android/SurfaceViewPreview.java" target-dir="src/io/iclue/backgroundvideo" />
+        <source-file src="src/android/TextureViewPreview.java" target-dir="src/io/iclue/backgroundvideo" />
+        <source-file src="src/android/VideoOverlay.java" target-dir="src/io/iclue/backgroundvideo" />
      </platform>
      
 </plugin>
