--- a/plugin.xml
+++ b/plugin.xml
@@ -79,4 +79,28 @@
             <merges target="" />
         </js-module>
     </platform>
+	
+	<platform name="windows8">
+        <config-file target="package.windows.appxmanifest" parent="/Package/Capabilities">
+            <DeviceCapability Name="microphone" />
+            <DeviceCapability Name="webcam" />
+        </config-file>
+        <config-file target="package.windows80.appxmanifest" parent="/Package/Capabilities">
+            <DeviceCapability Name="microphone" />
+            <DeviceCapability Name="webcam" />
+        </config-file>
+        <config-file target="package.phone.appxmanifest" parent="/Package/Capabilities">
+            <DeviceCapability Name="microphone" />
+            <DeviceCapability Name="webcam" />
+        </config-file>
+        <js-module src="src/windows/BackgroundVideoProxy.js" name="BackgroundVideoProxy">
+            <merges target="" />
+        </js-module>
+    </platform>
+	
+	<platform name="wp8">
+        <config-file target="Properties/WMAppManifest.xml" parent="/Deployment/App/Capabilities">
+            <Capability Name="ID_CAP_ISV_CAMERA" />
+        </config-file>
+    </platform>
 </plugin>
